kong-config/ingress-admin-api.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    name: kong-admin-ingress
    namespace: kong
  spec:
    rules:
    - host: kong-admin.example.gke
      http:
        paths:
        - backend:
            service:
              name: kong-kong-admin
              port:
                name: kong-admin-tls
          path: /
          pathType: ImplementationSpecific
    tls:
    - hosts:
      - kong-admin.example.gke
      secretName: example-gke-tls
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
