kong-config/ingress-proxy-api.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: kong-proxy-ingress
    namespace: kong
  spec:
    rules:
    - host: api.example.gke
      http:
        paths:
        - backend:
            service:
              name: kong-kong-proxy
              port:
                name: kong-proxy
          path: /
          pathType: ImplementationSpecific
    tls:
    - hosts:
      - api.example.gke
      secretName: example-gke-tls
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
